# Agentic-AI

./: README.md
Code Work/Project1_GraphRAG_Enterprise/: README.md  test_data.txt
Code Work/blog-quality-checker/: README.md  agent.py  app.py  notes.txt  requirements.txt  test.py  test_graph.py  test_need_improvement.py  test_run.py
Code Work/code-gen-agent/: README.md  agent.py  app.py  logger.py  requirements.txt  test.py
Code Work/customer-support-classifier/: .env.example  README.md  agent.py  app.py  batch_process.py  requirements.txt  test.py  tickets.csv
Code Work/graph-rag-lab/: master_graph_rag.py  notes.txt  requirements.txt  step1_init_db.py  step2_processing.py  step3_transform.py  step4_graph_store.py  step5_vector_index.py  step6_query.py
Code Work/graph-rag-system/: .env.example  README.md  demo_graph_rag.py  graph_rag.py  notes.txt  requirements.txt
Code Work/job-application-agent/: .env.example  .gitignore  README.md  main.py  notes.txt  pyproject.toml  requirements.txt
Code Work/pdftest/: PDF_RESEARCH_FINDINGS.md  benchmark_suite.py  generate_master_dashboard.py  generate_report.py  test_docling_full.py  test_langchain_full.py  test_langextract_full.py  test_ocr_full.py  test_pdfplumber_full.py  test_pymupdf_full.py  test_pymupdf_html.py  test_pymupdf_json.py  test_pypdf_full.py  test_unstructured_full.py
Code Work/research-assistant/: README.md  agent.py  app.py  output.txt  requirements.txt  test.py  (+1 more)
Code Work/research-assistant-v2/: README.md  agent.py  test.py
Notes/: Encoding vs Embedding.md  Prompt patterns.md  Vectors.md
(+70 files in other folders)
