[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-application-agent"
version = "0.1.0"
description = "Starter Job Application Agent with LangChain, Apify, Tavily, and Google Sheets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apify-client>=1.8.1",
  "gspread>=6.1.2",
  "google-auth>=2.40.1",
  "langchain>=0.3.24",
  "langchain-community>=0.3.23",
  "langchain-core>=0.3.56",
  "langchain-openai>=0.3.15",
  "langchain-ollama>=0.3.2",
  "langgraph>=0.4.1",
  "pydantic>=2.11.3",
  "pypdf>=4.3.1",
  "python-dotenv>=1.0.1",
  "tavily-python>=0.7.0",
]

[tool.setuptools]
packages = ["app", "app.tools"]
